# LJ_Agent

./: .gitignore  project_structure.md  pyproject.toml  requirement.md  赛题.md
config/: asr_glossary.yml
daily-modify/: 2026-07-12.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md
data/: README.md  document_manifest.json
docs/: conversation_design.md  langgraph_agent.md  qwen_audio_realtime.md  rag_architecture.md  redis_cache.md  灵犀智学项目对于本项目的借鉴.md  项目部署运行配置说明书.md
evaluation/: README.md
frontend/: admin_analytics.html  admin_attractions.html  admin_documents.html  admin_feedback.html  admin_foods.html  index.html  package-lock.json  package.json  visitor.html  vite.config.js
logs/: README.md
prompt/: rag_system_prompt.md
scripts/: README.md  __init__.py  build_qa_eval_dataset.py  build_tourism_analytics_snapshot.py  evaluate_qa.py  generate_demo_attraction_images.py  import_document.py  rebuild_knowledge_graph.py  rebuild_vector_store.py  refresh_attraction_seed_covers.py  rescore_qa_report.py
tests/: test_admin_analytics.py  test_admin_documents.py  test_admin_frontend.py  test_agent_api.py  test_agent_evidence.py  test_agent_tools.py  test_aliyun_embeddings.py  test_amap_api.py  test_amap_tools.py  test_answer_cache.py  test_answer_contract.py  test_answer_formatter.py  test_api.py  test_asr_glossary.py  test_attraction_api.py  test_attraction_store.py  test_conversation_context.py  test_conversation_store.py  test_embedding_factory.py  test_feedback_store.py  test_food_feedback_api.py  test_food_store.py  (+28 more)
(+177 files in other folders)
