[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lingjing-ai"
version = "0.1.0"
description = "LingJing AI scenic RAG and agent backend"
requires-python = ">=3.10"
dependencies = [
    "openpyxl>=3.1,<4",
    "pypinyin>=0.52,<1",
    "PyYAML>=6,<7",
    "redis>=8.0,<9",
    "websockets>=16,<17",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
